--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div>
+        <h1>Financial News Search and Sentiment Analysis API</h1>
+        <h2>See /help for details.</h2>
         <form action="news" method="post">
             <input name='content' type="text">
             <input type="submit">
